Ajout button mobile et tablette + correction html li

--- a/SASS/Components/_favorite_button.scss
+++ b/SASS/Components/_favorite_button.scss
@@ -17,11 +17,39 @@
         position: absolute;
         font-size: 31px;
     
-        &:hover{
+        &:active{
             opacity: 1;
-            transform: scale(1.05);
+            transform: scale(1.20);
         }
     }
 }
 
+// DESKTOP
+@media screen and (min-width: 870px) {
 
+    .favorite{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        padding: 7px 20px 10px 15px;
+        font-size: 30px;
+        position: relative;
+        z-index: 1;
+
+        .fas{
+            color: transparent;
+            background-image: linear-gradient(to top, $purple, $pink);
+            background-clip: text;
+            -webkit-background-clip: text;
+            opacity: 0;
+            transition: all 200ms ease;
+            position: absolute;
+            font-size: 31px;
+        
+            &:hover{
+                opacity: 1;
+                transform: scale(1.05);
+            }
+        }
+    }
+}
