--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -75,12 +75,9 @@
             flex-direction: row;
             justify-content: space-evenly;
 
-            & a{
+            & li{
                 width: 30%;
-                
-                & li{
-                    padding: 18px 20px;
-                }
+                padding: 18px 20px;
             }
         }
     }
